<?xml version="1.0"?>
<package format="2">
<name>lidar_2d_filters</name>
<version>0.0.1</version>
<description>The lidar_filters package</description>

<maintainer email="mksetaro@gmail.com">mike</maintainer>

<license>MIT</license>

<buildtool_depend>catkin</buildtool_depend>

<build_depend>roscpp</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>nodelet</build_depend>
<build_depend>laser_geometry</build_depend>
<build_depend>pluginlib</build_depend>

<exec_depend>roscpp</exec_depend>
<exec_depend>sensor_msgs</exec_depend>
<exec_depend>nodelet</exec_depend>
<exec_depend>laser_geometry</exec_depend>
<exec_depend>pluginlib</exec_depend>

<export>
<nodelet plugin="${prefix}/nodelets/nodelets.xml" />
</export>

</package>
